@startuml

title __LOG's Class Diagram__\n

  namespace com.itbird.design {
    namespace strategy {
      namespace log {
        class com.itbird.design.strategy.log.GridLayoutManager {
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace log {
        class com.itbird.design.strategy.log.LinearLayoutManager {
            + generateDefaultLayoutParams()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace log {
        class com.itbird.design.strategy.log.RecyclerView {
            + RecyclerView()
            + RecyclerView()
            + RecyclerView()
            + RecyclerView()
            + setLayoutManager()
            # onLayout()
        }
      }
    }
  }
  

  namespace com.itbird.design {
    namespace strategy {
      namespace log {
        abstract class com.itbird.design.strategy.log.RecyclerView.LayoutManager {
            {abstract} + generateDefaultLayoutParams()
        }
      }
    }
  }
  

  com.itbird.design.strategy.log.GridLayoutManager -up-|> com.itbird.design.strategy.log.LinearLayoutManager
  com.itbird.design.strategy.log.LinearLayoutManager -up-|> com.itbird.design.strategy.log.RecyclerView.LayoutManager
  com.itbird.design.strategy.log.RecyclerView -up-|> android.view.ViewGroup
  com.itbird.design.strategy.log.RecyclerView +-down- com.itbird.design.strategy.log.RecyclerView.LayoutManager
  com.itbird.design.strategy.log.RecyclerView.LayoutManager o-- com.itbird.design.strategy.log.RecyclerView : mRecyclerView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
